--- a/facebook.html
+++ b/facebook.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- Our Facebook layout will go here. -->
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-fixed-top navbar-default">
 		NAVBAR
 	</nav>
 	<!-- The container for our grid. The outermost grid must be placed within
@@ -33,6 +33,9 @@
 		<!-- Main feed: A cell that spans 7 columns -->
 		<div class="col-md-7">
 		  Main Feed
+		  <div style="height: 99999px;">
+
+		  </div>
 		</div>
 		<!-- Right sidebar: A cell that spans 3 columns -->
 		<div class="col-md-3">
