end of workshop 04

--- a/facebook.html
+++ b/facebook.html
@@ -185,12 +185,12 @@
 		  </ul>
 		</div>
 		<!-- Main feed: A cell that spans 7 columns -->
-		<div class="col-md-7">
-		  Main Feed
-		  <div style="height: 99999px;">
+    <div class="col-md-7">
+      Main Feed
+      <div style="height: 99999px;">
 
-		  </div>
-		</div>
+      </div>
+    </div>
 		<!-- Right sidebar: A cell that spans 3 columns -->
 		<div class="col-md-3">
 		  <!-- Nested grid! Like the outer grid, it's just a sequence of rows. -->
@@ -307,7 +307,23 @@
 	  </div>
 	</div>
 	<div class="chat-popup">
-	  CHAT MENU
+	  <div class="container-fluid">
+		<div class="row">
+		  <div class="col-md-8">
+		    <span class="green">●</span> Chat (32)
+		  </div>
+		  <div class="col-md-4">
+		    <div class="btn-group pull-right" role="group">
+			  <button type="button" class="btn btn-xs">
+			    <span class="glyphicon glyphicon-pencil"></span>
+			  </button>
+			  <button type="button" class="btn btn-xs">
+			    <span class="glyphicon glyphicon-asterisk"></span>
+			  </button>
+		    </div>
+		  </div>
+		</div>
+	  </div>
 	</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery.min.js"></script>
